# hs_multigripper

./: CMakeLists.txt  README.md  package.xml
include/: BaseWindow.h  HsRobWidget.h  MainWindow.h  UiWidget.h
qtcreator/build-hs_multigripper-Desktop-Debug/: Makefile  hs_multigripper  moc_mainwindow.cpp  ui_mainwindow.h
qtcreator/hs_multigripper/: a.h  b.h  hs_multigripper.pro  hs_multigripper.pro.user.a749b79  hs_multigripper.pro.user.df8933b  mainwindow.cpp  mainwindow.ui  mainwindow.ui.autosave
scripts/: ShutdownVoice.sh  bringup.sh  clearnode.sh  forceSensor.sh  forceSensor_run.sh  hscloudorder_bringup.sh  hscloudorder_shutdown.sh  voice.sh
src/: BaseWindow.cpp  HsRobWidget.cpp  MainWindow.cpp  UiWidget.cpp  VoiceControl.cpp  main.cpp
